2017-08-22  Patrick Uiterwijk  <puiterwijk@redhat.com>
	* various: Made python3 compatible

2017-08-21  Patrick Uiterwijk  <puiterwijk@redhat.com>
	* src/utils: Centralize logging setup

	* doc/protocol-design.txt: Update payload size representations to u64
	* src/server.py: Implement server-side payload size bump
	* src/bridge.py: Implement bridge-side payload size bump
	* src/client.py: Implement client-side payload size bump
	* src/utils.py: Implement generic payload size bump

2017-08-12  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/utils.py: Do not allow min-tls to be less than 1.2
	* src/server.py: Abort request if RPMs could not be parsed


2017-05-04  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/utils.py: Remove workaround for koji inconsistency

	* config.ac: Release 0.207
	* NEWS: Update

2017-05-03  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/utils.py: Add workaround for Koji inconsistency with proxyuser
	* src/utils.py: Add support for koji krb_rdns configuration

	* configure.ac: Release 0.206
	* NEWS: Update

2017-04-30  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/bridge.py: Typecast the koji rpm size info to int
	* src/client.py: Typecast the koji rpm size info to int

2017-04-11  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/bridge.py: Use requests instead of urlgrabber

2017-03-14  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/server.py: Add version to generated container signatures

2017-03-02  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/server_common.py: Allow certain states to be ignored in gpg_edit

	* src/server.py: Ignore KEYEXPIRED and SIGEXPIRED so we can unexpire

2017-02-28  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/server.py: Implement change-key-expiration

	* src/server_common.py: Implement GPG key edit

	* src/bridge.py: Implement change-key-expiration

	* src/client.py: Implement change-key-expiration

	* configure.ac: Release 0.205
	* NEWS: Update.
