@@ -1,0 +1,192 @@
+# Copyright (C) 2017 Red Hat, Inc.  All rights reserved.
+#
+# This copyrighted material is made available to anyone wishing to use, modify,
+# copy, or redistribute it subject to the terms and conditions of the GNU
+# General Public License v.2.  This program is distributed in the hope that it
+# will be useful, but WITHOUT ANY WARRANTY expressed or implied, including the
+# implied warranties of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+# See the GNU General Public License for more details.  You should have
+# received a copy of the GNU General Public License along with this program; if
+# not, write to the Free Software Foundation, Inc., 51 Franklin Street, Fifth
+# Floor, Boston, MA 02110-1301, USA.  Any Red Hat trademarks that are
+# incorporated in the source code or documentation are not subject to the GNU
+# General Public License and may only be used or replicated with the express
+# permission of Red Hat, Inc.
+#
+# Red Hat Author: Patrick Uiterwijk <puiterwijk@redhat.com>
+
+m4_define([S_NUM_RPMS], [100])
+
+AT_SETUP([Sign-rpms check])
+
+mkdir ca client bridge server gnupg rpm
+chmod 700 gnupg
+
+create_rpm()
+{
+	sed "s/@N@/$1"/g < "$abs_srcdir/tests/testrpm.spec" > "testrpm$1".spec
+	rpmbuild --quiet --define "_specdir $(pwd)" --define "_rpmdir $(pwd)" \
+		--define '_rpmfilename %{name}.rpm' --clean --rmspec \
+		-bb "testrpm$1.spec"
+}
+
+AT_DATA([nss_password_file], [[nss-pw
+]])
+AT_DATA([pkcs12_password_file], [[pk12-pw
+]])
+
+# Set up a CA and create all certificates
+AT_CHECK([certutil -d ca -N -f nss_password_file])
+# Specify serial number (-m) explicitly because it is time-based by default,
+# and creating certificates quickly can result in a collision.
+AT_CHECK([certutil -d ca -S -f nss_password_file -z /dev/null -n my-ca \
+		-s 'CN=My CA' -t CT,, -x -v 120 -m 1], , , [ignore])
+AT_CHECK([certutil -d ca -L -n my-ca -a > ca.pem])
+AT_CHECK([certutil -d ca -S -f nss_password_file -z /dev/null \
+		-n sigul-bridge-cert -s 'CN=localhost,OU=bridge' -c my-ca \
+		-t u,, -v 120 -m 2], , , [ignore])
+AT_CHECK([pk12util -d ca -o bridge.p12 -n sigul-bridge-cert \
+		-k nss_password_file -w pkcs12_password_file], , [ignore])
+AT_CHECK([certutil -d ca -S -f nss_password_file -z /dev/null \
+		-n sigul-server-cert -s 'CN=localhost,OU=server' -c my-ca \
+		-t u,, -v 120 -m 3], , , [ignore])
+AT_CHECK([pk12util -d ca -o server.p12 -n sigul-server-cert \
+		-k nss_password_file -w pkcs12_password_file], , [ignore])
+AT_CHECK([certutil -d ca -S -f nss_password_file -z /dev/null \
+		-n sigul-client-cert -s 'CN=root' -c my-ca -t u,, -v 120 -m 4],
+	 , , [ignore])
+AT_CHECK([pk12util -d ca -o client.p12 -n sigul-client-cert \
+		-k nss_password_file -w pkcs12_password_file], , [ignore])
+
+
+# Set up and start bridge:
+AT_CHECK([certutil -d bridge -N -f nss_password_file])
+AT_CHECK([certutil -d bridge -A -n my-ca -t CT,, -a -i ca.pem])
+AT_CHECK([pk12util -d bridge -i bridge.p12 -k nss_password_file \
+		-w pkcs12_password_file], , [ignore])
+rm bridge.p12
+
+[cat > bridge/bridge.conf <<EOF
+[bridge]
+required-fas-group:
+[daemon]
+unix-user:
+unix-group:
+[nss]
+nss-dir: $(pwd)/bridge
+nss-password: nss-pw
+EOF]
+
+AT_CHECK([sigul_bridge -c bridge/bridge.conf -d -v -v \
+		--internal-log-dir="$(pwd)/bridge" \
+		--internal-pid-dir="$(pwd)/bridge"])
+
+
+# Set up and start server:
+AT_CHECK([certutil -d server -N -f nss_password_file])
+AT_CHECK([certutil -d server -A -n my-ca -t CT,, -a -i ca.pem])
+AT_CHECK([pk12util -d server -i server.p12 -k nss_password_file \
+		-w pkcs12_password_file], , [ignore])
+rm server.p12
+
+mkdir server/gnupg/
+[cat > server/server.conf <<EOF
+[server]
+bridge-hostname: localhost
+# This check is lenient here since we try different usernames
+lenient-username-check: yes
+[database]
+database-path: $(pwd)/server/server.sqlite
+[gnupg]
+gnupg-home: $(pwd)/server/gnupg
+gnupg-key-type: RSA
+gnupg-key-usage: sign
+# This is too small for normal use, but for a test suite its okay
+gnupg-key-length: 1024
+gnupg-subkey-length: 1024
+[daemon]
+unix-user:
+unix-group:
+[nss]
+nss-dir: $(pwd)/server
+nss-password: wrong-nss-pw
+EOF]
+
+AT_CHECK([sigul_server_create_db -c server/server.conf -v -v])
+AT_CHECK([printf 'rootroot\0' | \
+		sigul_server_add_admin -c server/server.conf --batch -v -v \
+		-n root], 1, ,
+[Provided NSS password is incorrect
+])
+
+sed -e 's/wrong-nss-pw/nss-pw/' -i server/server.conf
+
+AT_CHECK([printf 'rootroot\0' | \
+		sigul_server_add_admin -c server/server.conf --batch -v -v \
+		-n root])
+
+AT_CHECK([sigul_server -c server/server.conf -d -v -v \
+		--internal-log-dir="$(pwd)/server" \
+		--internal-pid-dir="$(pwd)/server"])
+
+# Set up client
+AT_CHECK([certutil -d client -N -f nss_password_file])
+AT_CHECK([certutil -d client -A -n my-ca -t CT,, -a -i ca.pem])
+AT_CHECK([pk12util -d client -i client.p12 -k nss_password_file \
+		-w pkcs12_password_file], , [ignore])
+rm client.p12
+
+[cat > client/client.conf <<EOF
+[client]
+bridge-hostname: localhost
+server-hostname: localhost
+user-name: root
+[nss]
+nss-dir: $(pwd)/client
+nss-password: nss-pw
+EOF]
+
+# new-key
+AT_CHECK([[printf 'rootroot\0imported\0imported-key-pw\0' | \
+ 		sigul -c client/client.conf --batch -v -v \
+		import-key imported-key \
+		"$abs_srcdir/tests/imported-secret-key.asc"]])
+AT_CHECK([printf 'rootroot\0' | \
+		sigul -c client/client.conf --batch -v -v \
+		list-keys], ,
+[imported-key
+])
+AT_CHECK([rpm --dbpath "$(pwd)/rpm" --initdb])
+AT_CHECK([rpm --dbpath "$(pwd)/rpm" --import \
+	$abs_srcdir/tests/imported-public-key.asc])
+
+# sign-rpms
+mkdir unsigned signed
+AT_CHECK([cd unsigned; \
+	  for i in $(seq 1 ]S_NUM_RPMS[); do create_rpm "$i"; done; \
+	  cd ..])
+AT_CHECK([printf 'imported-key-pw\0' | \
+		sigul -c client/client.conf --batch \
+		sign-rpms -o signed imported-key unsigned/*])
+for i in $(seq 1 S_NUM_RPMS); do
+    echo "signed/testrpm$i.rpm: rsa sha1 (md5) pgp md5 OK"
+done | LC_ALL=C sort > expected
+AT_CHECK([rpm --dbpath "$(pwd)/rpm" -K signed/* | LC_ALL=C sort > output])
+AT_CHECK([diff -u expected output])
+rm -r expected output signed unsigned
+mkdir unsigned signed
+touch unsigned/empty.rpm
+AT_CHECK([printf 'imported-key-pw\0' | \
+		sigul -c client/client.conf --batch \
+		sign-rpms -o signed imported-key unsigned/*], 1, ,
+[ERROR: Error signing unsigned/empty.rpm: Error: Cannot sign zero-length RPM file unsigned/empty.rpm
+])
+AT_CHECK([ls signed])
+rm -r signed unsigned
+
+
+# Terminate daemons
+AT_CHECK([kill "$(cat server/sigul_server.pid)"])
+AT_CHECK([kill -QUIT "$(cat bridge/sigul_bridge.pid)"])
+
+AT_CLEANUP
