@@ -20,6 +20,7 @@ AT_TESTED([sigul sigul_bridge sigul_server sigul_server_create_db] dnl
 	[sigul_server_add_admin])
 
 m4_include([basic.at])
+m4_include([sign-rpms.at])
 m4_include([ostree.at])
 m4_include([containers.at])
 m4_include([strict-usernames.at])
