@@ -1,4 +1,5 @@
 2017-08-22  Patrick Uiterwijk  <puiterwijk@redhat.com>
+	* tests/basic.at: Split sign-rpms test from basic
 	* various: Made python3 compatible
 
 2017-08-21  Patrick Uiterwijk  <puiterwijk@redhat.com>
